deploy/k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carina-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: carina
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: carina
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: carina:latest
          args: ['web']
          ports:
            - name: http
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: carina-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: carina
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
