deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carina
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffering: 'off'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '86400'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '86400'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - carina.example
      secretName: carina-tls
  rules:
    - host: carina.example
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: carina-app
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carina-web
                port:
                  name: http
